[package]
name = "hw5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "bootstrap"
path = "src/bootstrap.rs"

[[bin]]
name = "peer"
path = "src/peer.rs"


[[bin]]
name = "client"
path = "src/client.rs"